# dproki

./: .gitignore  CMakeLists.txt  README.txt  dplink.yml  smr.config  srpkg.yml
exec/: CMakeLists.txt  p4model_add_dummy_rotary_links.c  p4model_add_sensor.c  p4model_chg.c
h/dproki/: Actuator.h  CasCoords.h  Common.h  DrawableLink.h  InterfaceSceneObject.h  Joint.h  Link.h  ObjFileReader.h  ObjSensor.h  ObjShape.h  Sensor.h  Shape.h  dprint.h  dproki.h
h/p4model/: p4model.h
src/: ':w  CasCoords.h  Common.cc  Common.h  DrawableLink.h  Joint.h  Link.h  ObjFileReader.cc  ObjFileReader.h  ObjSensor.cc  ObjSensor.h  ObjShape.cc  ObjShape.h  Sensor.h  Shape.h  dp_type.h  errchk.h  p4model.cc
test/: main.cc
